syntax = "proto3";
option go_package=".;gatewayServer";

message HelloRequest{
  string RequestName = 1;
}

message HelloResponse {
  string ResponseMsg = 1;
}

service Hello {
  rpc sayhello(HelloRequest) returns (HelloResponse){};
}